@@ -46,6 +46,9 @@
 	* lisp/sawfish/wm/commands/x-cycle.jl: Warp-if-necessary when cycling
 	by Christopher Bratusek. Add an option allowing to warp the pointer to
 	windows while cycling.
+	* lisp/sawfish/wm/windows.jl: Expose warp-pointer by Christopher
+	Bratusek. Add a way to setup the warping functions from withing the
+	UI.
 
 2008-08-29  Janek Kozicki <cosurgi@gmail.com>
 	* lisp/sawfish/wm/commands/grow-pack.jl
